# PDFEdit.Rust

./: .gitignore  Cargo.toml  README.md
src/: annotations.rs  app.rs  document.rs  export.rs  main.rs  ocr.rs  signature.rs
src/ui/: canvas.rs  dialogs.rs  icons.rs  mod.rs  sidebar.rs  toolbar.rs
