[package]
name = "pdf_editor"
version = "0.1.0"
edition = "2021"
description = "A modern PDF editor with e-signature, OCR, highlighting, and export capabilities"
authors = ["PDFEdit.Rust Contributors"]

[[bin]]
name = "pdf_editor"
path = "src/main.rs"

[dependencies]
# UI framework
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }

# PDF reading/writing
lopdf = "0.33"

# Image processing
image = { version = "0.25", features = ["png", "jpeg", "tiff"] }

# Native file dialogs
rfd = "0.15"

# Serialization for annotation persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SVG rasterization for toolbar icons
resvg = "0.44"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
tempfile = "3"

# OCR via tesseract
leptess = "0.14"

# DOCX export
docx-rs = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
